// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Conference HOC component with empty chapter and forum arrays match expected snapshot 1`] = `
<Connect(Conference)
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Conference
    chapterArray={Array []}
    getChapterArray={[Function]}
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      }
    }
  >
    <div />
  </Conference>
</Connect(Conference)>
`;

exports[`Conference HOC component with filled chapter and forum arrays match expected snapshot 1`] = `
<Connect(Conference)
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Conference
    chapterArray={
      Array [
        Object {
          "forumArray": Array [
            Object {
              "chapterId": 1,
              "description": "Все вопросы касательно геймплея и мира игры Ex Machina в целом.",
              "id": 10,
              "lastTopicInfo": Object {
                "lastActiveTopic": "Идеи к Ex Machina -2 часть четвертая",
                "lastActiveTopicId": 1,
                "latesPostAutorGroupColor": "#ffa510",
                "latesPostAutorId": 1,
                "latesPostAutorName": "kto",
                "latesPostTimeCreation": 2015-08-17T10:42:32.000Z,
              },
              "order": 1,
              "postsCount": 4113,
              "subForumArray": Array [
                Object {
                  "id": 11,
                  "order": 2,
                  "title": "Самопал",
                },
                Object {
                  "id": 12,
                  "order": 1,
                  "title": "Архив форумки",
                },
              ],
              "title": "Общие вопросы",
              "topicsCount": 26,
            },
          ],
          "id": 1,
          "order": 1,
          "title": "Ex Machina",
        },
        Object {
          "forumArray": Array [
            Object {
              "chapterId": 2,
              "description": "Вопросы технического характера по игре Ex Machina.",
              "id": 20,
              "lastTopicInfo": Object {
                "lastActiveTopic": "Проблемы с игрой",
                "lastActiveTopicId": 2,
                "latesPostAutorGroupColor": "#fbeab2",
                "latesPostAutorId": 2,
                "latesPostAutorName": "Bykawka",
                "latesPostTimeCreation": 2016-09-22T09:53:09.000Z,
              },
              "order": 2,
              "postsCount": 857,
              "title": "Технические вопросы",
              "topicsCount": 13,
            },
          ],
          "id": 2,
          "order": 2,
          "title": "Ex Machina Меридиан 113",
        },
        Object {
          "forumArray": Array [],
          "id": 3,
          "order": 3,
          "title": "Ex Machina: Arcade",
        },
      ]
    }
    getChapterArray={[Function]}
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      }
    }
  >
    <div>
      <Chapter
        chapterItem={
          Object {
            "forumArray": Array [
              Object {
                "chapterId": 1,
                "description": "Все вопросы касательно геймплея и мира игры Ex Machina в целом.",
                "id": 10,
                "lastTopicInfo": Object {
                  "lastActiveTopic": "Идеи к Ex Machina -2 часть четвертая",
                  "lastActiveTopicId": 1,
                  "latesPostAutorGroupColor": "#ffa510",
                  "latesPostAutorId": 1,
                  "latesPostAutorName": "kto",
                  "latesPostTimeCreation": 2015-08-17T10:42:32.000Z,
                },
                "order": 1,
                "postsCount": 4113,
                "subForumArray": Array [
                  Object {
                    "id": 11,
                    "order": 2,
                    "title": "Самопал",
                  },
                  Object {
                    "id": 12,
                    "order": 1,
                    "title": "Архив форумки",
                  },
                ],
                "title": "Общие вопросы",
                "topicsCount": 26,
              },
            ],
            "id": 1,
            "order": 1,
            "title": "Ex Machina",
          }
        }
      >
        <div />
      </Chapter>
      <Chapter
        chapterItem={
          Object {
            "forumArray": Array [
              Object {
                "chapterId": 2,
                "description": "Вопросы технического характера по игре Ex Machina.",
                "id": 20,
                "lastTopicInfo": Object {
                  "lastActiveTopic": "Проблемы с игрой",
                  "lastActiveTopicId": 2,
                  "latesPostAutorGroupColor": "#fbeab2",
                  "latesPostAutorId": 2,
                  "latesPostAutorName": "Bykawka",
                  "latesPostTimeCreation": 2016-09-22T09:53:09.000Z,
                },
                "order": 2,
                "postsCount": 857,
                "title": "Технические вопросы",
                "topicsCount": 13,
              },
            ],
            "id": 2,
            "order": 2,
            "title": "Ex Machina Меридиан 113",
          }
        }
      >
        <div />
      </Chapter>
      <Chapter
        chapterItem={
          Object {
            "forumArray": Array [],
            "id": 3,
            "order": 3,
            "title": "Ex Machina: Arcade",
          }
        }
      >
        <div />
      </Chapter>
    </div>
  </Conference>
</Connect(Conference)>
`;
